// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[ atoms / Paragraph ] #Paragraph when 'Paragraph' Centered is mounted should render 1`] = `
<DocumentFragment>
  <p
    class="paragraph color-base size-md weight-normal is-centered"
  >
    Lose consequence night studies Wolves should wizards destruction burglar? All right, then. Keep your secrets.
  </p>
</DocumentFragment>
`;

exports[`[ atoms / Paragraph ] #Paragraph when 'Paragraph' Colors is mounted should render 1`] = `
<DocumentFragment>
  <p
    class="paragraph color-base size-md weight-normal"
  >
    Swords are no more use here. Esquire days mountain Fangorn champion brace waiting laboring preparing! Canopy plunder deceit cakehole strange Udùn piled fighters potent?
  </p>
  <p
    class="paragraph color-muted size-md weight-normal"
  >
    Swords are no more use here. Esquire days mountain Fangorn champion brace waiting laboring preparing! Canopy plunder deceit cakehole strange Udùn piled fighters potent?
  </p>
  <p
    class="paragraph color-inverted size-md weight-normal"
  >
    Swords are no more use here. Esquire days mountain Fangorn champion brace waiting laboring preparing! Canopy plunder deceit cakehole strange Udùn piled fighters potent?
  </p>
  <p
    class="paragraph color-primary size-md weight-normal"
  >
    Swords are no more use here. Esquire days mountain Fangorn champion brace waiting laboring preparing! Canopy plunder deceit cakehole strange Udùn piled fighters potent?
  </p>
  <p
    class="paragraph color-tertiary size-md weight-normal"
  >
    Swords are no more use here. Esquire days mountain Fangorn champion brace waiting laboring preparing! Canopy plunder deceit cakehole strange Udùn piled fighters potent?
  </p>
</DocumentFragment>
`;

exports[`[ atoms / Paragraph ] #Paragraph when 'Paragraph' Default is mounted should render 1`] = `
<DocumentFragment>
  <p
    class="paragraph color-base size-md weight-normal"
  >
    Swords are no more use here. Esquire days mountain Fangorn champion brace waiting laboring preparing! Canopy plunder deceit cakehole strange Udùn piled fighters potent?
  </p>
</DocumentFragment>
`;

exports[`[ atoms / Paragraph ] #Paragraph when 'Paragraph' Inline is mounted should render 1`] = `
<DocumentFragment>
  <p
    class="paragraph color-base size-md weight-normal is-inline"
  >
    Swords are no more.
  </p>
</DocumentFragment>
`;

exports[`[ atoms / Paragraph ] #Paragraph when 'Paragraph' Monospace is mounted should render 1`] = `
<DocumentFragment>
  <p
    class="paragraph color-base size-md weight-normal is-monospace"
  >
    Swords are no more use here. Esquire days mountain Fangorn champion brace waiting laboring preparing! Canopy plunder deceit cakehole strange Udùn piled fighters potent?
  </p>
</DocumentFragment>
`;

exports[`[ atoms / Paragraph ] #Paragraph when 'Paragraph' Sizes is mounted should render 1`] = `
<DocumentFragment>
  <p
    class="paragraph color-base size-xs weight-normal"
  >
    Swords are no more use here. Esquire days mountain Fangorn champion brace waiting laboring preparing! Canopy plunder deceit cakehole strange Udùn piled fighters potent?
  </p>
  <p
    class="paragraph color-base size-sm weight-normal"
  >
    Swords are no more use here. Esquire days mountain Fangorn champion brace waiting laboring preparing! Canopy plunder deceit cakehole strange Udùn piled fighters potent?
  </p>
  <p
    class="paragraph color-base size-md weight-normal"
  >
    Swords are no more use here. Esquire days mountain Fangorn champion brace waiting laboring preparing! Canopy plunder deceit cakehole strange Udùn piled fighters potent?
  </p>
  <p
    class="paragraph color-base size-lg weight-normal"
  >
    Swords are no more use here. Esquire days mountain Fangorn champion brace waiting laboring preparing! Canopy plunder deceit cakehole strange Udùn piled fighters potent?
  </p>
</DocumentFragment>
`;

exports[`[ atoms / Paragraph ] #Paragraph when 'Paragraph' Striked is mounted should render 1`] = `
<DocumentFragment>
  <p
    class="paragraph color-base size-md weight-normal is-striked"
  >
    Swords are no more use here. Esquire days mountain Fangorn champion brace waiting laboring preparing! Canopy plunder deceit cakehole strange Udùn piled fighters potent?
  </p>
</DocumentFragment>
`;

exports[`[ atoms / Paragraph ] #Paragraph when 'Paragraph' Weights is mounted should render 1`] = `
<DocumentFragment>
  <p
    class="paragraph color-base size-md weight-normal"
  >
    Swords are no more use here. Esquire days mountain Fangorn champion brace waiting laboring preparing! Canopy plunder deceit cakehole strange Udùn piled fighters potent?
  </p>
  <p
    class="paragraph color-base size-md weight-medium"
  >
    Swords are no more use here. Esquire days mountain Fangorn champion brace waiting laboring preparing! Canopy plunder deceit cakehole strange Udùn piled fighters potent?
  </p>
  <p
    class="paragraph color-base size-md weight-semibold"
  >
    Swords are no more use here. Esquire days mountain Fangorn champion brace waiting laboring preparing! Canopy plunder deceit cakehole strange Udùn piled fighters potent?
  </p>
</DocumentFragment>
`;
